my-apps/ai/archived/perplexica/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perplexica
  namespace: perplexica
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "perplexica.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: perplexica-backend-service
          port: 3001
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: perplexica-frontend-service
          port: 3000
